--- a/app/src/main/res/layout/item_search_category.xml
+++ b/app/src/main/res/layout/item_search_category.xml
@@ -30,7 +30,7 @@
         android:padding="4dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/categoryItems"
-        app:layout_constraintDimensionRatio="H,"
+        app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_next" />
